WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241098
[:has() pseudo-class] Fix invalidation with scope breaking :is/not()
https://bugs.webkit.org/show_bug.cgi?id=241098
Summary
[:has() pseudo-class] Fix invalidation with scope breaking :is/not()
Antti Koivisto
Reported
2022-05-30 04:10:05 PDT
:has(:is:(foo bar)) can be affected by mutations outside the :has scope
Attachments
Patch
(143.57 KB, patch)
2022-05-30 04:16 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(144.05 KB, patch)
2022-05-30 04:45 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-05-30 04:16:21 PDT
Created
attachment 459855
[details]
Patch
Antti Koivisto
Comment 2
2022-05-30 04:45:48 PDT
Created
attachment 459857
[details]
Patch
EWS
Comment 3
2022-05-30 10:59:38 PDT
Found 1 new test failure: webgl/2.0.0/conformance2/textures/image_bitmap_from_image_bitmap/tex-3d-rgb5_a1-rgba-unsigned_short_5_5_5_1.html
EWS
Comment 4
2022-05-30 15:11:05 PDT
Committed
r295035
(
251130@main
): <
https://commits.webkit.org/251130@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459857
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-05-30 15:12:12 PDT
<
rdar://problem/94123183
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug