Source/WebCore/style/ChildChangeInvalidation.cpp
@@ -52,7 +52,7 @@ void ChildChangeInvalidation::invalidateForChangedElement(Element& changedElemen
             return isChild;
         case MatchElement::HasDescendant:
         case MatchElement::HasSiblingDescendant:
-        case MatchElement::HasNonSubject:
+        case MatchElement::HasNonSubjectOrScopeBreaking:
             return true;
         default:
             ASSERT_NOT_REACHED();
@@ -137,7 +137,7 @@ void ChildChangeInvalidation::invalidateForHasAfterMutation()
 
 static bool needsDescendantTraversal(const RuleFeatureSet& features)
 {
-    if (features.usesMatchElement(MatchElement::HasNonSubject))
+    if (features.usesMatchElement(MatchElement::HasNonSubjectOrScopeBreaking))
         return true;
     return features.usesMatchElement(MatchElement::HasDescendant) || features.usesMatchElement(MatchElement::HasSiblingDescendant);
 };
