Source/WebCore/style/RuleFeature.h
@@ -51,12 +51,13 @@ enum class MatchElement : uint8_t {
     HasDescendant,
     HasSibling,
     HasSiblingDescendant,
-    HasNonSubject, // FIXME: This is a catch-all for cases where :has() is in non-subject position.
+    HasNonSubjectOrScopeBreaking, // FIXME: This is a catch-all for cases where :has() is in a non-subject position, or may break scope.
     Host
 };
 constexpr unsigned matchElementCount = static_cast<unsigned>(MatchElement::Host) + 1;
 
 enum class IsNegation : bool { No, Yes };
+enum class CanBreakScope : bool { No, Yes }; // :is/not() inside scoped selector can be affected by things outside the scope.
 
 // For MSVC.
 #pragma pack(push, 4)
@@ -134,7 +135,7 @@ private:
         Vector<InvalidationFeature> pseudoClasses;
         Vector<InvalidationFeature> hasPseudoClasses;
     };
-    void recursivelyCollectFeaturesFromSelector(SelectorFeatures&, const CSSSelector&, MatchElement = MatchElement::Subject, IsNegation = IsNegation::No);
+    void recursivelyCollectFeaturesFromSelector(SelectorFeatures&, const CSSSelector&, MatchElement = MatchElement::Subject, IsNegation = IsNegation::No, CanBreakScope = CanBreakScope::No);
 };
 
 bool isHasPseudoClassMatchElement(MatchElement);
@@ -154,7 +155,7 @@ inline bool RuleFeatureSet::usesHasPseudoClass() const
         || usesMatchElement(MatchElement::HasDescendant)
         || usesMatchElement(MatchElement::HasSiblingDescendant)
         || usesMatchElement(MatchElement::HasSibling)
-        || usesMatchElement(MatchElement::HasNonSubject);
+        || usesMatchElement(MatchElement::HasNonSubjectOrScopeBreaking);
 }
 
 } // namespace Style
